Fix extra spaces around dirs

--- a/gallery.css
+++ b/gallery.css
@@ -15,7 +15,7 @@
 }
 
 /** LISTING - DIRECTORY **/
-.gallery .listing > .item.directory {
+.gallery .listing .item.directory {
 	margin: 2px;
 	border: 1px solid #99FF00;
 	color: #99FF00;
@@ -26,7 +26,7 @@
 	cursor: pointer;	
 }
 
-.gallery .listing > .item.directory:hover {
+.gallery .listing .item.directory:hover {
 	color: black;
 	background-color: #99FF00;
 }
@@ -36,7 +36,7 @@
 }
 
 /** LISTING - IMAGE **/
-.gallery .listing > .item.image {
+.gallery .listing .item.image {
 	margin: 2px;
 	color: #ff8000;
 	display: inline-block;
@@ -45,17 +45,17 @@
 	font-size: 10px;
 }
 
-.gallery .listing > .item.image > .name {
+.gallery .listing .item.image > .name {
 	width: 128px;
 	display: inline-table;
 	word-break: break-word;
 }
 
-.gallery .listing > .item.image:hover {
+.gallery .listing .item.image:hover {
 	color: #99ff00
 }
 
-.gallery .listing > .item.image > .thumb {
+.gallery .listing .item.image .thumb {
 	width: 128px;
 	height: 128px;
 	border: 1px solid #ff8000;
@@ -63,7 +63,7 @@
 	background-position: center;
 }
 
-.gallery .listing > .item.image:hover > .thumb {
+.gallery .listing .item.image:hover .thumb {
 	border: 1px solid #99ff00;
 }
 
